--- a/style.css
+++ b/style.css
@@ -1,7 +1,116 @@
-.attribution {
-  font-size: 11px;
-  text-align: center;
+:root {
+    --clr-white: hsl(0, 0%, 100%);
+    --clr-gray: hsl(0, 0%, 50%);
+    --clr-black: hsl(0, 0%, 0%);
+    --clr-yellow: hsl(47, 88%, 63%);
+    --fs-p: 16px;
+    --fs-head: 1.5rem;
+    box-sizing: border-box;
 }
-.attribution a {
-  color: hsl(228, 45%, 44%);
+
+body {
+    font-family: "Figtree", sans-serif;
+    font-weight: 600;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--clr-yellow);
+    height: 100vh;
+    font-size: var(--fs-p);
+    color: var(--clr-black);
+}
+
+.wrapper {
+    --default-w: calc(380px - 3rem);
+    --default-h: calc(520px - 3rem);
+    background-color: var(--clr-white);
+    height: var(--default-h);
+    width: var(--default-w);
+    padding: 1.5rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    border-radius: 1rem;
+    border: 1px solid black;
+    box-shadow: 10px 10px;
+}
+
+.wrapper:hover {
+    box-shadow: 16px 16px;
+}
+
+
+.tag {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--clr-yellow);
+    height: 1.2rem;
+    font-size: 0.8rem;
+    width: 4.5rem;
+    padding: 0.3rem;
+    border-radius: 0.25rem;
+    font-weight: 800;
+}
+
+.content-div {
+    display: flex;
+    flex-direction: column;
+}
+
+h1 {
+    font-weight: 800;
+    font-size: 1.5rem;
+    cursor: pointer;
+}
+
+h1:hover {
+    color: var(--clr-yellow);
+}
+
+.head-img {
+    border-radius: 0.5rem;
+}
+
+.content {
+    color: var(--clr-gray);
+}
+
+.author-div {
+    display: flex;
+    align-items: center;
+}
+
+.author-img {
+    height: 2rem;
+    aspect-ratio: 1;
+}
+
+.author-name {
+    padding: 1rem;
+    font-weight: 800;
+}
+
+.attribution { 
+    font-size: 11px; 
+    text-align: center;
+    margin-top: 2rem;
+    color: var(--clr-black);
+}
+
+.attribution a { 
+    color: var(--clr-gray); 
+}
+
+@media (max-width: 768px) {
+    .wrapper {
+        --w: calc(325px - 3rem);
+        width: var(--w);
+        height: calc(500px - 3rem);
+    }
+    .head-img {
+        width: 279px;
+    }
 }
